--- a/clients/pyproject.toml
+++ b/clients/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "requests>=2.32.5",
+    "types-requests>=2.32.4.20250913",
     "websockets>=15.0.1",
 ]
